Add maven tomee pluggin (lost in previous commit)